--- a/koa2-learn/views/index.ejs
+++ b/koa2-learn/views/index.ejs
@@ -7,6 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>EJS Welcome to <%= title %></p>
-    <div>123123</div>
+    <div>1231239999</div>
   </body>
 </html>
